Add buttonAdmin for redirect in menu-admin when token is true

--- a/src/components/css/CalendarV2.css
+++ b/src/components/css/CalendarV2.css
@@ -3,6 +3,10 @@ html{
     width: 100vw;
 }
 
+.hidden{
+    display : none;
+}
+
 .weeklyContainer{
     display:flex;
 }
@@ -445,12 +449,6 @@ i {
 .dayMobile > .event > h2 {
     text-transform: uppercase;
 }
-
-
-
-
-
-
 
 .searchForm{
     width:100%;
