--- a/src/components/css/calendar.css
+++ b/src/components/css/calendar.css
@@ -261,12 +261,19 @@ html {
     justify-content: space-around;
     }
   
-    
+    @media screen and (min-width: 1295px) {
+      .menuCss  {
+          color: rgb(0, 0, 0);
+          list-style-type: none;
+          
+          padding: 22px;
+        }
+      }
 
     .menuCss  {
         color: rgb(0, 0, 0);
         list-style-type: none;
-        font-size: 2.8vh;
+       
         padding: 22px;
       }
       
@@ -568,9 +575,9 @@ html {
     margin: 8px;
 }
 
-#selected {
+/* #selected {
     background: rgba(180, 180, 180, 0.45);
-}
+} */
 
 .dayMobile > .important{
     background: rgba(180, 180, 180, 0.45);
