--- a/src/screen/Events.css
+++ b/src/screen/Events.css
@@ -35,6 +35,13 @@
     background-size: cover;
     background-position-x: 12vw;
 }
+.screenRegister {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+
+}
 
 .displayData {
     display: flex;
