--- a/src/components/css/Menu.css
+++ b/src/components/css/Menu.css
@@ -1,7 +1,7 @@
 .menuCss  {
   color: rgb(0, 0, 0);
   list-style-type: none;
-  font-size: 2.8vh;
+  
   padding: 22px;
 }
 
@@ -12,12 +12,13 @@
 .aLinkRC {
 size: 20px;
 font-family: 'Oswald', 'sans-serif';
-line-height: 2;
+
 color: black;
 text-decoration: none;
 text-decoration-style: solid;
 font-weight: normal;
 letter-spacing: .06em;
+line-height: 55px
 }
 
 .liDesckop :hover {
