--- a/src/components/css/MonthlyV2.css
+++ b/src/components/css/MonthlyV2.css
@@ -93,20 +93,7 @@ main {
     -moz-osx-font-smoothing: grayscale;
     font-feature-settings: 'liga';
   }
-  
-  
-  /* VARIABLES */
-  
-  :root {
-    --main-color: #1a8fff;
-    --text-color: #777;
-    --text-color-light: #ccc;
-    --border-color: #eee;
-    --bg-color: #f9f9f956;
-    --neutral-color: #fff;
-  }
-  
-  
+
   /* GENERAL */
   
   * {
@@ -192,7 +179,7 @@ main {
   .calendar {
     display: block;
     position: relative;
-    width: 100%;
+    width: 81.4vw;
     background: var(--neutral-color);
     border: 1px solid var(--border-color);
   }
@@ -235,7 +222,7 @@ main {
   
   .calendar .body .cell {
     position: relative;
-    height: 5em;
+    height: 16vh;
     border-right: 1px solid var(--border-color);
     overflow: hidden;
     cursor: pointer;
@@ -345,12 +332,11 @@ main {
 
 .calendar {
   display: none;
-  position: relative;
- 
-  width: 100%;
-    /* height: 100vh; */
-    background: url(../../pictures/backg.png);
-    background-size: 140%;
+  position: relative; 
+  background: url(/static/media/backg.57d5c861.png);
+  background-size: auto;
+  background-size: cover;
+  width: 81.4vw;
   border: 1px solid var(--border-color);
 }
 
@@ -392,7 +378,7 @@ main {
 
 .calendar .body .cell {
   position: relative;
-  height: 5em;
+  height: 16vh;
   border-right: 1px solid var(--border-color);
   overflow: hidden;
   cursor: pointer;
