--- a/src/components/css/CalendarV2.css
+++ b/src/components/css/CalendarV2.css
@@ -338,8 +338,13 @@ i {
         align-self: center;
         margin: 5px;
     }
-    
+
     .important{
+        background: rgb(255, 0, 98);
+        border-radius: 15px;
+    }
+    
+    .regular{
         background: rgba(255,255,255, .45);
         border-radius: 15px;
     }
