--- a/src/components/css/CalendarV2.css
+++ b/src/components/css/CalendarV2.css
@@ -394,10 +394,10 @@ i {
     margin: 5px;
 }
 
-.important{
+/* .important{
     background: rgba(255, 255, 255, 0.45);
     border-radius: 15px;
-}
+} */
 
 /* MOBILE */
 
