--- a/src/components/css/MonthlyV3.css
+++ b/src/components/css/MonthlyV3.css
@@ -20,19 +20,6 @@
   font-feature-settings: 'liga';
 }
 
-
-VARIABLES
-
-:root {
-  --main-color: #1a8fff;
-  --text-color: rgb(25, 25, 25);
-  --text-color-light: rgb(75, 75 ,75 );
-  --border-color: #eee;
-  --bg-color: #f9f9f9ce;
-  --neutral-color: rgba(212, 77, 77, 0.418);
-}
-
-
 /* GENERAL */
 
 * {
@@ -44,8 +31,8 @@ body {
     font-size: 1em;
     font-weight: 300;
     line-height: 1.5;
-    color: var(--text-color);
-    background: var(--bg-color);
+    color: rgb(25, 25, 25);
+    background: #f9f9f9ce;
     position: relative;
 }
 
@@ -53,14 +40,14 @@ header {
   display: block;
   width: 100%;
   padding: 1.75em 0;
-  border-bottom: 1px solid var(--border-color);
-  background: var(--neutral-color);
+  border-bottom: 1px solid #eee;
+  background: rgba(212, 77, 77, 0.418);
 }
 
 header #logo {
   font-size: 175%;
   text-align: center;
-  color: var(--main-color);
+  color: #1a8fff;
   line-height: 1;
 }
 
@@ -105,8 +92,8 @@ main {
       font-size: 1em;
       font-weight: 300;
       line-height: 1.5;
-      color: var(--text-color);
-      background: var(--bg-color);
+      color: rgb(25, 25, 25);
+      background: #f9f9f9ce;
       position: relative;
   }
   
@@ -114,14 +101,14 @@ main {
     display: block;
     width: 100%;
     padding: 1.75em 0;
-    border-bottom: 1px solid var(--border-color);
-    background: var(--neutral-color);
+    border-bottom: 1px solid #eee;
+    background: rgba(212, 77, 77, 0.418);
   }
   
   header #logo {
     font-size: 175%;
     text-align: center;
-    color: var(--main-color);
+    color: #1a8fff;
     line-height: 1;
   }
   
@@ -180,8 +167,8 @@ main {
     display: block;
     position: relative;
     width: 81.4vw;
-    background: var(--neutral-color);
-    border: 1px solid var(--border-color);
+    background: rgba(212, 77, 77, 0.418);
+    border: 1px solid #eee;
   }
   
   .calendar .header {
@@ -189,7 +176,7 @@ main {
     font-weight: 700;
     font-size: 115%;
     padding: 1.5em 0;
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid #eee;
   }
   
   .calendar .header .icon {
@@ -200,7 +187,7 @@ main {
   .calendar .header .icon:hover {
     transform: scale(1.75);
     transition: .25s ease-out;
-    color: var(--main-color);
+    color: #1a8fff;
   }
   
   .calendar .header .icon:first-of-type {
@@ -214,29 +201,29 @@ main {
   .calendar .days {
     text-transform: uppercase;
     font-weight: 400;
-    color: var(--text-color-light);
+    color: rgb(75, 75 ,75 );
     font-size: 70%;
     padding: .75em 0;
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid #eee;
   }
   
   .calendar .body .cell {
     position: relative;
     height: 16vh;
-    border-right: 1px solid var(--border-color);
+    border-right: 1px solid #eee;
     overflow: hidden;
     cursor: pointer;
-    background: var(--neutral-color);
+    background: rgba(212, 77, 77, 0.418);
     transition: 0.25s ease-out;
   }
   
   .calendar .body .cell:hover {
-    background: var(--bg-color);
+    background: #f9f9f9ce;
     transition: 0.5s ease-out;
   }
   
   .calendar .body .row {
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid #eee;
   }
   
   .calendar .body .row:last-child {
@@ -257,14 +244,14 @@ main {
   }
   
   .calendar .body .disabled {
-    color: var(--text-color-light);
+    color: rgb(75, 75 ,75 );
     pointer-events: none;
   }
   
   .calendar .body .cell .bg {
     font-weight: 700;
     line-height: 1;
-    color: var(--main-color);
+    color: #1a8fff;
     opacity: 0;
     font-size: 8em;
     position: absolute;
@@ -337,7 +324,7 @@ main {
   background-size: auto;
   background-size: cover;
   width: 81.4vw;
-  border: 1px solid var(--border-color);
+  border: 1px solid #eee;
 }
 
 .calendar .header {
@@ -345,7 +332,7 @@ main {
   font-weight: 700;
   font-size: 115%;
   padding: 1.5em 0;
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 1px solid #eee;
 }
 
 .calendar .header .icon {
@@ -356,7 +343,7 @@ main {
 .calendar .header .icon:hover {
   transform: scale(1.75);
   transition: .25s ease-out;
-  color: var(--main-color);
+  color: #1a8fff;
 }
 
 .calendar .header .icon:first-of-type {
@@ -370,29 +357,29 @@ main {
 .calendar .days {
   text-transform: uppercase;
   font-weight: 400;
-  color: var(--text-color-light);
+  color: rgb(75, 75 ,75 );
   font-size: 70%;
   padding: .75em 0;
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 1px solid #eee;
 }
 
 .calendar .body .cell {
   position: relative;
   height: 16vh;
-  border-right: 1px solid var(--border-color);
+  border-right: 1px solid #eee;
   overflow: hidden;
   cursor: pointer;
-  background: var(--neutral-color);
+  background: rgba(212, 77, 77, 0.418);
   transition: 0.25s ease-out;
 }
 
 .calendar .body .cell:hover {
-  background: var(--bg-color);
+  background: #f9f9f9ce;
   transition: 0.5s ease-out;
 }
 
 .calendar .body .row {
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 1px solid #eee;
 }
 
 .calendar .body .row:last-child {
@@ -413,14 +400,14 @@ main {
 }
 
 .calendar .body .disabled {
-  color: var(--text-color-light);
+  color: rgb(75, 75 ,75 );
   pointer-events: none;
 }
 
 .calendar .body .cell .bg {
   font-weight: 700;
   line-height: 1;
-  color: var(--main-color);
+  color: #1a8fff;
   opacity: 0;
   font-size: 8em;
   position: absolute;
