--- a/src/components/css/CalendarV2.css
+++ b/src/components/css/CalendarV2.css
@@ -18,7 +18,7 @@ html{
 .calendarScreen{
     display: flex;
     border: 16px solid rgb(44, 67, 98);
-    height: 100vh;
+    height: 100%;
 }
 
 .navbar{
