--- a/src/components/css/CalendarV2.css
+++ b/src/components/css/CalendarV2.css
@@ -145,8 +145,7 @@ i {
       
       .aLinkRC {
       size: 20px;
-      font-family: 'Oswald', 'sans-serif';
-      
+      font-family: 'Helvetica Neue', 'sans-serif';
       color: black;
       text-decoration: none;
       text-decoration-style: solid;
