--- a/src/components/css/Menu.css
+++ b/src/components/css/Menu.css
@@ -11,7 +11,7 @@
 
 .aLinkRC {
 size: 20px;
-font-family: 'Oswald', 'sans-serif';
+font-family: 'Helvetica Neue', 'sans-serif';
 
 color: black;
 text-decoration: none;
