--- a/src/components/css/calendar.css
+++ b/src/components/css/calendar.css
@@ -134,7 +134,7 @@ i {
       
       .aLinkRC {
       size: 20px;
-      font-family: 'Oswald', 'sans-serif';
+      font-family: 'Helvetica Neue', 'sans-serif';
       line-height: 2;
       color: black;
       text-decoration: none;
