--- a/src/screen/Events.css
+++ b/src/screen/Events.css
@@ -1,7 +1,8 @@
 .screenEvent{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: nowrap;
     /* background-image: url(https://pbs.twimg.com/media/DmgHJ8eX0AAolAO.jpg);
     background-size: cover;
@@ -46,7 +47,6 @@
 .displayData {
     display: flex;
     justify-content: center;
-    width: 100%;
 }
 
 .container-button {
@@ -74,6 +74,7 @@
     background-image: url(https://revusetcorriges.files.wordpress.com/2018/03/rc.gif);
     background-size: cover;
     background-position-x: 8vw;
+    width:100vw;
 }
 /* 
 .getdata {
@@ -112,8 +113,8 @@ h4 {
     font-size:1em;
     color: black;
     display: block;
-    margin-right: 39em;
-    margin-top: 14em;
+    /* margin-right: 39em;
+    margin-top: 14em; */
 }
 .buttonform:hover {
     text-decoration-line: underline;
