--- a/src/components/css/Login.css
+++ b/src/components/css/Login.css
@@ -33,13 +33,10 @@
 }
 
 .login{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-/* Logo Revus & Corrigés */
-
 
 /* Button Sign up*/
 .btnSignUp{
@@ -79,16 +76,16 @@
 }
 
 .iconLogin{
-    width: 150px;
-    margin-bottom: 5%;
-    position: relative;
+  width: 150px;
+  margin-bottom: 5%;
+  position: relative;
 }
 
 .iconUser{
-    width: 29%;
-    margin-top: -38vh;
-    margin-left: 1vw;
-    position: absolute;
+  width: 29%;
+  margin-top: -38vh;
+  margin-left: 1vw;
+  position: absolute;
 }
 
 .iconUser{
@@ -98,4 +95,11 @@
 
 .adminFormIn{
   height: 40vh;
+}
+
+.iceye{
+  width: 1.8%;
+  left: -2.5%;
+  bottom: -0.9%;
+  position: relative;
 }
