--- a/src/components/css/Menu.css
+++ b/src/components/css/Menu.css
@@ -1,7 +1,6 @@
 .menuCss  {
   color: rgb(0, 0, 0);
   list-style-type: none;
-  
   padding: 22px;
 }
 
@@ -10,15 +9,14 @@
 }
 
 .aLinkRC {
-size: 20px;
-font-family: 'Helvetica Neue', 'sans-serif';
-
-color: black;
-text-decoration: none;
-text-decoration-style: solid;
-font-weight: normal;
-letter-spacing: .06em;
-line-height: 55px
+  size: 20px;
+  font-family: 'Helvetica Neue', 'sans-serif';
+  color: black;
+  text-decoration: none;
+  text-decoration-style: solid;
+  font-weight: normal;
+  letter-spacing: .06em;
+  line-height: 55px;
 }
 
 .liDesckop :hover {
@@ -32,15 +30,14 @@ line-height: 55px
   }
 
   .responsiveDisplay{
-    width: 50vw
+    width: 50vw;
   }
 
   .logo{
     width: 70%;
     margin-left: 65%;
-    margin-right: 35%
+    margin-right: 35%;
   }
-
 }
 
 
