--- a/src/components/css/calendar.css
+++ b/src/components/css/calendar.css
@@ -6,22 +6,24 @@ html{
 .weeklyContainer{
     display:flex;
     background: url(../../pictures/backg.png);
+    background-size: cover;
+    width: 81.4vw;
+    justify-content: space-evenly;
 }
 
 .weekly{
+    width:78vw;
+}
+
+.calendarScreen{
     display: flex;
-    border: 18px solid rgb(44, 67, 98);
-    height: 100vh;
+    border: 16px solid rgb(44, 67, 98);
+    min-height: 100vh;
+    height: 100%;
 }
 
 .navbar{
     width: 20%;
-}
-
-.weeklyDesktop{
-    width: 100%;
-    /* background: url(../../pictures/backg.png); */
-    background-size: 140%;
 }
 
 .weeklyDisplayMobile{
@@ -33,8 +35,6 @@ html{
     justify-content: center;
     margin: -5px;
 }
-
-
 
 .weeklyMobile{
     width: 100vw;
@@ -51,7 +51,8 @@ html{
 }
 
 .weeklyHeadMobile > h1{
-    font-size: 1.6em;
+    font-size: 1.4em;
+    color: black;
 }
 
 .weeklyDisplay{
@@ -62,8 +63,6 @@ html{
     display:flex;
     flex-direction: column;
 }
-
-
 
 .nextMobile{
     height: 22px;
@@ -79,8 +78,8 @@ i {
     border: solid black;
     border-width: 0 3px 3px 0;
     display: inline-block;
-    padding: 3px;
-    margin-top: 0px;
+    padding: 4px;
+    margin-top: 10px;
     cursor: pointer;
 }
   
@@ -98,153 +97,145 @@ i {
     margin-left: 10px;
 }
 
+.navbar {
+    width: 17%;
+}
 
-/* @media screen and (min-width: 10px) and (max-width: 1024px) {
+.arrow {
 
-    .Calendar {
-        display: block;
-    }
-} */
-     
-  .arrow {
-  
     display: flex;
     justify-content: space-around;
-    }
-  
-    @media screen and (min-width: 1295px) {
-      .menuCss  {
-          color: rgb(0, 0, 0);
-          list-style-type: none;
-          
-          padding: 22px;
-        }
-      }
-
+}
+    
+@media screen and (min-width: 1430px) {
     .menuCss  {
         color: rgb(0, 0, 0);
         list-style-type: none;
-       
+        font-size: 2.8vh;
         padding: 22px;
-      }
-      
-      .logo{
-        width: 90%;
-      }
-      
-      .aLinkRC {
-      size: 20px;
-      font-family: 'Helvetica Neue', 'sans-serif';
-      line-height: 2;
-      color: black;
-      text-decoration: none;
-      text-decoration-style: solid;
-      font-weight: normal;
-      letter-spacing: .06em;
-      }
-      
-      .liDesckop :hover {
-        box-shadow: #bc33e9 0 -12px inset; 
-        list-style-type: none;
-      }
-      
-      @media screen and (min-width: 10px) and (max-width: 1024px) {
-        .aLinkRC {
-          display: none;
-        }
-      
-        .responsiveDisplay{
-          width: 50vw
-        }
-      
-        .logo{
-          display: none;
-        }
-      
-      }
+    }
+}
+.menuCss  {
+    color: rgb(0, 0, 0);
+    list-style-type: none;
+    padding: 22px;
+}
 
+.logo{
+    width: 90%;
+}
 
+.aLinkRC {
+    size: 20px;
+    font-family: 'Helvetica Neue', 'sans-serif';
+    color: black;
+    text-decoration: none;
+    text-decoration-style: solid;
+    font-weight: normal;
+    letter-spacing: .06em;
+    line-height: 55px
+}
 
+.liDesckop :hover {
+    box-shadow: #bc33e9 0 -12px inset; 
+    list-style-type: none;
+}
 
- @media screen and (min-width: 10px) and (max-width: 1024px) {
-      
+@media screen and (min-width: 10px) and (max-width: 1024px) {
+    .aLinkRC {
+        display: none;
+    }
+
+    .responsiveDisplay{
+        width: 50vw
+    }
+
+    .logo{
+        display: none;
+    }
+
+    .navbar {
+        width: 0%;
+        border: none
+    }
+
+    .weeklyDesktop{
+        width: 181vw;
+        height: 118vh;
+        background: url(../../pictures/backg.png);
+        background-size: cover;
+    }
+
+    .buttonGoToMonthly{
+        display: none
+    }
+}
+
+@media screen and (min-width: 10px) and (max-width: 1024px) {
     #wrap {
         font-family: sans-serif;
         font-size: 21px;
         line-height: 1.6;
         margin-left: 0;
         display: flex;
-        
         transition: transform .4s cubic-bezier(.25, .1, .25, 1);
         position: fixed;
         top: 23px; left: 363px;
         z-index: 8;
         text-decoration: none;
         text-decoration-style: solid;
-    
-    
-      
+    }
+
+    #wrap:not(:target) {
+        transform: translate3d(-335px, 0, 0);
     }
     
-      
-      
-      #wrap:not(:target) {
-        transform: translate3d(-335px, 0, 0);
-      }
-      
-      #wrap:target {
+    #wrap:target {
         transform: translate3d(0, 0, 0);
-      }
-      
-      #open,
-      #close {
+    }
+    
+    #open, #close {
         height: 44px;
         text-align: left ;
         display: block;
         margin-left: -35%;
-      }
-      
-      #wrap:target #open,
-      #wrap:not(:target) #close {
+    }
+    
+    #wrap:target #open,
+    #wrap:not(:target) #close {
         display: none;
-      }
-      
-      #wrap:target #open {
+    }
+    
+    #wrap:target #open {
         display: none;
-      }
-      
-      .nav .aLinkRC {
-        
+    }
+    
+    .nav .aLinkRC {
         text-decoration-style: solid;
         color: black;
         text-decoration: none;
         display: block;
-      }
-      
-      .header {
-        
+    }
+    
+    .header {
         width: 100%;
     }
-      
-      .nav {
-        
+    
+    .nav {
         top: 0%;
         left: 1px;
         position:fixed 
-      }
-    
-    
+    }
+
     #warp,  #open {
         background-image: url(https://static.thenounproject.com/png/568033-200.png);
         background-size: contain;
         background-repeat: no-repeat;
-       
         height: 34px;
         width: 34px;
-       
-      }
-    
-     #close {
+    }
+
+    #close {
         background-color: white;
         width: 101vw;
         height: 18vh;
@@ -252,102 +243,67 @@ i {
         margin-top: -4vh;
         text-decoration: none;
         color: black;
-     }
-    
-     .liResponsive :hover {
-        
-        list-style-type: none;
-     }
-    
-     .shadowBox:hover {
-      box-shadow: #bc33e9 310px -21px inset;
-      
-     }
-    
-    .shadowBox{
-      padding-left: 2em;
-      list-style-type: none; 
     }
-    
-    
-     .liResponsive {
-      
-      list-style-type: none;
+
+    .liResponsive :hover {
+        list-style-type: none;
+    }
+
+    .shadowBox:hover {
+        box-shadow: #bc33e9 310px -21px inset;
+    }
+
+    .shadowBox{
+        padding-left: 2em;
+        list-style-type: none; 
+    }
+
+    .liResponsive {
+        list-style-type: none;
     }
 
     .calendar{
         border: none;
     }
-    
-     
-    
-    @media screen and (min-width : 1024px)  {
+}
+@media screen and (min-width : 1025px)  {
     #close, .liResponsive {
         display: none;
     }
-    }
+}
 
+.event{
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+}
 
+.event > h2 {
+    font-size: .85em;
+}
 
+.event > p {
+    font-size: .75em;
+    margin: 0px;
+}
 
+.event > img {
+    width: 80%;
+    align-self: center;
+    margin: 5px;
+}
 
+.important{
+    background: rgba(212, 77, 77, 0.418);
+    border-radius: 15px;
+}
 
-    .DayzDisplay{
-        width: 20%;
-        margin-right: 4px;
-        margin-left: 4px;
-        margin-top: 0px;
-        display: inline-block;
-    }
-    
-    .DayzDisplay > h1 {
-        text-transform: uppercase;
-        font-size: 1.0em;
-        color: rgb(48, 48, 48);
-        margin: 0px;
-    
-    }
-    
-    .DayzDisplay > .line {
-        width: 100%;
-        height: 1px;
-        background: grey;
-        margin-top: 8px;
-        margin-bottom: 4px;
-    }
-    
-    .event{
-        display: flex;
-        flex-direction: column;
-        padding: 5px;
-    }
-    .event > h2 {
-        font-size: .85em;
-    }
-    
-    .event > p {
-        font-size: .75em;
-        margin: 0px;
-    }
-    
-    .event > img {
-        width: 80%;
-        align-self: center;
-        margin: 5px;
-    }
-    
-    .important{
-        background: rgba(255,255,255, .45);
-        border-radius: 15px;
-    }
+.partner{
+    background: rgba(187, 187, 187, 0.418);
+    border-radius: 15px;
+}
 
-
-
-
-
-
-
-    /* DESKTOP */
+/* DESKTOP */
 .dayDesktop{
     width: 20%;
     margin-right: 4px;
@@ -376,6 +332,7 @@ i {
     flex-direction: column;
     padding: 5px;
 }
+
 .event > h2 {
     font-size: .85em;
 }
@@ -383,6 +340,7 @@ i {
 .event > p {
     font-size: .75em;
     margin: 0px;
+    color :rgb(58, 58, 58);
 }
 
 .event > img {
@@ -391,13 +349,7 @@ i {
     margin: 5px;
 }
 
-.important{
-    background: rgba(255, 255, 255, 0.45);
-    border-radius: 15px;
-}
-
 /* MOBILE */
-
 .dayMobile {
     margin-right: 4px;
     margin-left: 4px;
@@ -426,9 +378,10 @@ i {
     margin: 8px;
 }
 
-/* #selected {
-    background: rgba(180, 180, 180, 0.45);
-} */
+#selected {
+    background: rgba(212, 77, 77, 0.418);
+    border-radius: 45px;
+}
 
 .dayMobile > .important{
     background: rgba(180, 180, 180, 0.45);
@@ -451,8 +404,9 @@ i {
 
 .days h1{
     cursor: pointer;
-    font-size: 1.2em;
+    font-size: 1em;
     padding:5px;
+    color : black;
 }
 
 .daySelector{
@@ -461,42 +415,66 @@ i {
     align-items: center;
     width: 100%;
 }
+
 .dayMobile > .event > h2 {
     text-transform: uppercase;
-}
-
-
-
-
-
-
-
-.searchForm{
-    width:100%;
-    display: flex;
-    overflow: hidden;
-}
-
-.searchForm input{
-    width: 90%
-}
-
-.boutonLoupe{
-    height: 50%;
-    background: #bc33e9;
-    border: none;
-    margin-left: -2.13em;
-    margin-top: 0.72em;
-    border-radius: 15%;
+    color: black;
 }
 
 .loupe{
     width: 12px;
 }
 
+.slide-pane__header{
+    display: none;
+}
+
+.inputModal{
+    border: none;
+    margin-left: -2.13em;
+    margin-top: 0.72em;
+    border-radius: 15%;
+}
+
 @media screen and (min-width: 10px) and (max-width: 1024px) {
-        .searchForm {
-          display: none;
-          
-      }
-    }}
+    .searchForm {
+        display: none;
+    }
+    .calendarScreen{
+        border: none;
+        height: 100vh;
+    }
+
+    .buttonMenuAdminMonthly {
+        margin-top: 39em;
+    }
+
+    .weeklyContainer{
+        width: 100vw;
+    }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1294px) {
+    .buttonMenuAdminMonthly {
+        margin-top: 14em;
+        width: 65%;
+        height: 7rem;
+        font-size: 7rem;
+    }
+}
+
+.modalWrapper{
+    display: flex;
+    width: 100%;
+    height: 20%;
+    justify-content: center;
+    align-items: center;
+}
+
+.inputModal{
+    font-size: 2.5em;
+}
+
+.searchResult{
+    font-size: 1.5em;
+}
