--- a/src/screen/Events.css
+++ b/src/screen/Events.css
@@ -99,6 +99,11 @@ h4 {
     text-decoration-line: underline;
 }
 
+#buttonEventForm {
+    position: absolute;
+    right: 1vw;
+}
+
 .menuadminbuttonform {
     text-decoration: none;
     padding-left: 2vw;
