--- a/src/components/css/calendar.css
+++ b/src/components/css/calendar.css
@@ -13,6 +13,11 @@
     height: 100%;
 }
 
+.tardis {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+}
  /******************************
  *       NAVBAR/SCREEN         *
  ******************************/
