--- a/src/components/css/calendar.css
+++ b/src/components/css/calendar.css
@@ -17,6 +17,7 @@
     position: absolute;
     bottom: 0;
     left: 50%;
+    height: 16px;
 }
  /******************************
  *       NAVBAR/SCREEN         *
