--- a/src/components/css/MonthlyV3.css
+++ b/src/components/css/MonthlyV3.css
@@ -310,8 +310,7 @@ main {
   display: none;
   position: relative; 
   background: url(/static/media/backg.57d5c861.png);
-  background-size: auto;
-  background-size: cover;
+  background-size: cover !important;
   width: 81.4vw;
   border: 1px solid #eee;
 }
